<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_cuenta"
            android:icon="@drawable/cuent"
            android:title="@string/menu_cuenta" />
        <item
            android:id="@+id/nav_buscador"
            android:icon="@drawable/lupam"
            android:title="@string/menu_buscador" />
        <item
            android:id="@+id/nav_compras"
            android:icon="@drawable/compras"
            android:title="@string/menu_compras" />
        <item
            android:id="@+id/nav_notificaciones"
            android:icon="@drawable/notificaciones"
            android:title="@string/menu_notificaciones" />
        <item
            android:id="@+id/nav_iniciarsesion"
            android:icon="@drawable/iniciarsesion"
            android:title="@string/menu_iniciarSesion" />
    </group>
</menu>